--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,22 @@
     <string name="app_name">Ma réu</string>
 
     <string name="room_name">Nom de la salle</string>
-    <string name="meeting_time">Heure de la réunion</string>
+    <string name="meeting_time">Heure et date de la réunion</string>
     <string name="meeting_subject">Sujet de la réunion</string>
     <string name="mail_addresses">Participants à la réunion</string>
+    <string name="meeting_title">%1$s - %2$s - %3$s</string>
+    <string-array name="rooms">
+        <item>Réunion A</item>
+        <item>Réunion B</item>
+        <item>Réunion C</item>
+        <item>Réunion D</item>
+        <item>Réunion E</item>
+        <item>Réunion F</item>
+        <item>Réunion G</item>
+        <item>Réunion H</item>
+        <item>Réunion I</item>
+        <item>Réunion J</item>
+
+    </string-array>
+
 </resources>
